--- a/trunk/VIENNAAddIn/VIENNAAddIn.csproj
+++ b/trunk/VIENNAAddIn/VIENNAAddIn.csproj
@@ -122,6 +122,9 @@
     <Compile Include="Exceptions\UnexpectedElementException.cs" />
     <Compile Include="Exceptions\XMLException.cs" />
     <Compile Include="menu\AddInContext.cs" />
+    <Compile Include="upcc3\ccts\dra\BDTSupplementaryComponent.cs" />
+    <Compile Include="upcc3\ccts\dra\CDTContentComponent.cs" />
+    <Compile Include="upcc3\ccts\dra\CodelistEntry.cs" />
     <Compile Include="upcc3\ccts\dra\ElementLibrary.cs" />
     <Compile Include="upcc3\ccts\otf\AbstractEAItem.cs" />
     <Compile Include="upcc3\ccts\otf\AbstractEAPackage.cs" />
@@ -272,13 +275,12 @@
     <Compile Include="Settings\SynchStereotypesForm.Designer.cs">
       <DependentUpon>SynchStereotypesForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="upcc3\ccts\dra\SUP.cs" />
+    <Compile Include="upcc3\ccts\dra\CDTSupplementaryComponent.cs" />
     <Compile Include="upcc3\ccts\dra\UpccAssociation.cs" />
     <Compile Include="upcc3\ccts\dra\UpccAttribute.cs" />
     <Compile Include="upcc3\ccts\dra\UpccClass.cs" />
-    <Compile Include="upcc3\ccts\dra\UpccCON.cs" />
+    <Compile Include="upcc3\ccts\dra\BDTContentComponent.cs" />
     <Compile Include="upcc3\ccts\dra\ABIE.cs" />
-    <Compile Include="upcc3\ccts\dra\AbstractDT.cs" />
     <Compile Include="upcc3\ccts\dra\ACC.cs" />
     <Compile Include="upcc3\ccts\dra\ASBIE.cs" />
     <Compile Include="upcc3\ccts\dra\ASCC.cs" />
@@ -294,7 +296,6 @@
     <Compile Include="upcc3\ccts\dra\CDT.cs" />
     <Compile Include="upcc3\ccts\dra\CDTLibrary.cs" />
     <Compile Include="upcc3\ccts\dra\DOCLibrary.cs" />
-    <Compile Include="upcc3\ccts\dra\DTComponent.cs" />
     <Compile Include="upcc3\ccts\dra\ENUM.cs" />
     <Compile Include="upcc3\ccts\dra\ENUMLibrary.cs" />
     <Compile Include="upcc3\ccts\dra\PRIM.cs" />
