--- a/VIENNAAddIn/VIENNAAddIn.csproj
+++ b/VIENNAAddIn/VIENNAAddIn.csproj
@@ -177,6 +177,7 @@
     <Compile Include="upcc3\ccts\util\EADiagramExtensions.cs" />
     <Compile Include="upcc3\ccts\util\EAElementExtensions.cs" />
     <Compile Include="upcc3\ccts\util\EATaggedValueExtensions.cs" />
+    <Compile Include="upcc3\ccts\util\MultiPartTaggedValue.cs" />
     <Compile Include="upcc3\import\cctsndr\bdt\BDTComplexType.cs" />
     <Compile Include="upcc3\import\cctsndr\bdt\BDTExtensionComplexType.cs" />
     <Compile Include="upcc3\import\cctsndr\bdt\BDTRestrictionComplexType.cs" />
