--- a/VIENNAAddIn/VIENNAAddIn.csproj
+++ b/VIENNAAddIn/VIENNAAddIn.csproj
@@ -197,11 +197,18 @@
     <Compile Include="upcc3\Wizards\dev\cache\CacheItemCCLibrary.cs" />
     <Compile Include="upcc3\Wizards\dev\cache\CacheItemCDTLibrary.cs" />
     <Compile Include="upcc3\Wizards\dev\cache\CCCache.cs" />
+    <Compile Include="upcc3\Wizards\dev\temporarymodel\abiemodel\CandidateABIE.cs" />
+    <Compile Include="upcc3\Wizards\dev\temporarymodel\abiemodel\CandidateBCC.cs" />
+    <Compile Include="upcc3\Wizards\dev\temporarymodel\abiemodel\PotentialASBIE.cs" />
+    <Compile Include="upcc3\Wizards\dev\temporarymodel\abiemodel\PotentialBBIE.cs" />
+    <Compile Include="upcc3\Wizards\dev\temporarymodel\abiemodel\PotentialBDT.cs" />
+    <Compile Include="upcc3\Wizards\dev\temporarymodel\bdtmodel\TemporaryBDTModel.cs" />
+    <Compile Include="upcc3\Wizards\dev\temporarymodel\TemporaryModel.cs" />
     <Compile Include="upcc3\Wizards\dev\util\CheckedListModel.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="upcc3\Wizards\dev\util\ListModel.cs" />
-    <Compile Include="upcc3\Wizards\dev\util\TemporaryABIEModel.cs" />
+    <Compile Include="upcc3\Wizards\dev\temporarymodel\abiemodel\TemporaryABIEModel.cs" />
     <Compile Include="upcc3\Wizards\XsdImporterForm.xaml.cs">
       <DependentUpon>XsdImporterForm.xaml</DependentUpon>
     </Compile>
