--- a/trunk/VIENNAAddIn/VIENNAAddIn.csproj
+++ b/trunk/VIENNAAddIn/VIENNAAddIn.csproj
@@ -173,6 +173,7 @@
     <Compile Include="upcc3\ccts\otf\ValidationService.cs" />
     <Compile Include="upcc3\ccts\otf\validators\BLibraryValidator.cs" />
     <Compile Include="upcc3\ccts\otf\validators\constraints\ParentMustBeModelOrBInformationVOrBLibrary.cs" />
+    <Compile Include="upcc3\ccts\util\EaAggregationKind.cs" />
     <Compile Include="upcc3\ccts\util\EAAttributeExtensions.cs" />
     <Compile Include="upcc3\ccts\util\EAConnectorExtensions.cs" />
     <Compile Include="upcc3\ccts\util\EADiagramExtensions.cs" />
