--- a/trunk/CCLImporter/CCLConverter.csproj
+++ b/trunk/CCLImporter/CCLConverter.csproj
@@ -59,6 +59,10 @@
       <Project>{D788A632-CD92-4C8A-AE54-A37CD5871368}</Project>
       <Name>CctsRepository</Name>
     </ProjectReference>
+    <ProjectReference Include="..\VIENNAAddInUtils\VIENNAAddInUtils.csproj">
+      <Project>{3C1352B8-1B53-46F9-BC18-BFF48115A606}</Project>
+      <Name>VIENNAAddInUtils</Name>
+    </ProjectReference>
     <ProjectReference Include="..\VIENNAAddIn\VIENNAAddIn.csproj">
       <Project>{5642201A-D4A3-4F3B-9BC5-71C3A0DB7EA3}</Project>
       <Name>VIENNAAddIn</Name>
