--- a/trunk/UpccModel/UpccModel.csproj
+++ b/trunk/UpccModel/UpccModel.csproj
@@ -46,21 +46,27 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cardinality.cs" />
+    <Compile Include="MetaAbstractClass.cs" />
     <Compile Include="MetaAssociation.cs" />
     <Compile Include="MetaAttribute.cs" />
     <Compile Include="MetaClass.cs" />
     <Compile Include="MetaClassifier.cs" />
     <Compile Include="MetaDataType.cs" />
     <Compile Include="MetaDependency.cs" />
+    <Compile Include="MetaEnumeration.cs" />
+    <Compile Include="MetaEnumerationLiteral.cs" />
     <Compile Include="MetaPackage.cs" />
     <Compile Include="MetaTaggedValue.cs" />
     <Compile Include="PackageClassifierContainmentRelation.cs" />
     <Compile Include="PackageContainmentRelation.cs" />
+    <Compile Include="UpccAbstractClasses.cs" />
     <Compile Include="UpccAssociations.cs" />
     <Compile Include="UpccAttributes.cs" />
     <Compile Include="UpccClasses.cs" />
     <Compile Include="UpccDataTypes.cs" />
     <Compile Include="UpccDependencies.cs" />
+    <Compile Include="UpccEnumerationLiterals.cs" />
+    <Compile Include="UpccEnumerations.cs" />
     <Compile Include="UpccModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UpccModelLibraries.cs" />
