--- a/trunk/VIENNAAddIn/VIENNAAddIn.csproj
+++ b/trunk/VIENNAAddIn/VIENNAAddIn.csproj
@@ -207,10 +207,14 @@
       <DependentUpon>StandardLibraryImporter.xaml</DependentUpon>
     </Compile>
     <Compile Include="upcc3\Wizards\dev\temporarymodel\abiemodel\CandidateAbie.cs" />
+    <Compile Include="upcc3\Wizards\dev\temporarymodel\abiemodel\CandidateAcc.cs" />
     <Compile Include="upcc3\Wizards\dev\temporarymodel\abiemodel\CandidateBcc.cs" />
+    <Compile Include="upcc3\Wizards\dev\temporarymodel\abiemodel\CandidateCcLibrary.cs" />
     <Compile Include="upcc3\Wizards\dev\temporarymodel\abiemodel\PotentialAsbie.cs" />
     <Compile Include="upcc3\Wizards\dev\temporarymodel\abiemodel\PotentialBbie.cs" />
     <Compile Include="upcc3\Wizards\dev\temporarymodel\abiemodel\PotentialBdt.cs" />
+    <Compile Include="upcc3\Wizards\dev\temporarymodel\bdtmodel\CandidateBdt.cs" />
+    <Compile Include="upcc3\Wizards\dev\temporarymodel\bdtmodel\CandidateBdtLibrary.cs" />
     <Compile Include="upcc3\Wizards\dev\temporarymodel\bdtmodel\TemporaryBdtModel.cs" />
     <Compile Include="upcc3\Wizards\dev\temporarymodel\TemporaryModel.cs" />
     <Compile Include="upcc3\Wizards\dev\UpccModelCreator.xaml.cs">
